# Reward_Yourself_ToDO

./: .gitignore  config.json  config_loader.py  database.py  flutter_bootstrap.js  flutter_service_worker.js  history_view.py  index.html  logout.py  main.py  pyproject.toml  requirements.txt  reward_view.py  session.json  supabase_wrappers.js  todo_view.py  user_manager.py  user_storage.py
.github/workflows/: deploy.yml  main.yml
assets/app/: app.zip.hash
reward-yourself-todo/reward-yourself-todo/: ContentView.swift  reward_yourself_todoApp.swift
reward-yourself-todo/reward-yourself-todo.xcodeproj/: project.pbxproj
reward-yourself-todo/reward-yourself-todo.xcodeproj/project.xcworkspace/xcuserdata/kaelin.xcuserdatad/: UserInterfaceState.xcuserstate
reward-yourself-todo/reward-yourself-todo.xcodeproj/xcuserdata/kaelin.xcuserdatad/xcschemes/: xcschememanagement.plist
reward-yourself-todo/reward-yourself-todoTests/: reward_yourself_todoTests.swift
reward-yourself-todo/reward-yourself-todoUITests/: reward_yourself_todoUITests.swift  reward_yourself_todoUITestsLaunchTests.swift
src/: README.md  calendar_view.py  database.py  index.html  main.py  manifest.json  requirements.txt  reward_view.py  route_appending_stuff  service-worker.js  todo_view.py  user_manager.py
