[project]
name = "reward-yourself"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Kaelin", email = "you@example.com" }
]
dependencies = [
  "flet==0.27.5",
  "arrow",
  "sqlite3"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "reward-yourself"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.5",
    "arrow"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.5"}
arrow = "*"


[tool.flet.ios]
bundle_id = "com.weekendgrind.reward-yourself-todo"
signing_certificate = "Apple Development"
team_id = "98D65BEXQ9"
provisioning_profile = "/Users/kaelin/Library/Developer/Xcode/UserData/Provisioning Profiles/6a9c418e-9d8e-4393-bc8f-f782b7a0b9da"
export_method = "development"

[tool.flet.web]
renderer = "html"
route_url_strategy = "hash"


